[BUGFIX][UI] Cleanup alignment in tables - Column titles and values should be left-aligned - Margin between filter icon and table header

--- a/src/main/webapp/css/core/table.css
+++ b/src/main/webapp/css/core/table.css
@@ -3,6 +3,10 @@
     padding: 0.25em;
 }
 
+.table th {
+    padding: 0.5em 0.25em;
+}
+
 .table-col-sm {
     min-width: 50px;
 }
